2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/single2.c:
	Coverity #985: Avoid segfault on malloc failure.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/dmxextension.c:
	Coverity #1037: Sanity check idx before use.

2006-04-05  Fredrik Höglund  <fredrik@kde.org>

	* Xext/Makefile.am:
	Put the screensaver extension back in the Xext module.

	* Xext/saver.c:
	* dix/globals.c:
	* include/globals.h:
	* os/WaitFor.c:
	Move the screenSaverSuspended variable to DIX globals.

	* configure.ac:
	Restore the old link order for the Xorg and Xdmx binaries.

2006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/darwin/darwin.c:
	* hw/xfree86/common/xf86Init.c:
	Bug #5300: Fix missing spaces in the Build OS line in the log. 
	(Egmont Koblinger)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #2142: Make font path logging more readable. (Eduard Fuchs)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxcmds.c:
	Fix a server crash due to memsetting beyond allocated memory 
	when running GL applications. (Alan Hourihane, backported from 
	head)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbmmx.c:
	Bug #6346: Build fix when using gcc -mno-sse. (Jonathan 
	Adamczewski)

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxcmds.c:
	Coverity #38: Dead branch elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Coverity #75: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #82: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmdsswap.c:
	Coverity #271: Fix an unbelievably boneheaded NULL chase.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/xnest/Pixmap.c:
	Coverity #616: Fix a rare memory leak.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #833: Fix a rather nasty memory leak.
